ecmascript/parser/tests/test262-error-references/fail/d5f84d71afd585da.js.stderr
error: Expected Comma, got Some(LBrace)
 --> $DIR/tests/test262-parser/fail/d5f84d71afd585da.js:1:17
  |
1 | ({ set: s(a, b) { } })
  |                 ^

